fixed : layout issue

--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ body {
 
 .parent-container {
     background-color: #FAFAFA !important;
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    justify-content: center !important;
 }
 
 .result-card {
